@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-57 View Users List

class "Admin Users UI" as UI <<boundary>>
class "AuthController" as Controller <<controller>>
class "UsersService" as Service <<service>>
class "User" as User <<domain>>
class "Role" as Role <<domain>>
class "RolesGuard" as RolesGuard <<domain>>

UI --> Controller : GET /auth/users
Controller --> Service : delegates
Service --> User : uses
Service --> Role : uses
Service --> RolesGuard : uses

note right of UI
UC-57 - View Users List
Actors: Admin
Pre: Đã đăng nhập với role admin
Post: Danh sách users hiển thị
end note
@enduml
